--- a/raise-funds-backend/src/main/resources/templates/apply.html
+++ b/raise-funds-backend/src/main/resources/templates/apply.html
@@ -27,7 +27,6 @@
         <div class="weui-cell weui-cell_active">
             <div class="weui-cell__hd" style="position: relative; margin-right: 10px;">
                 <img th:src="${user.getHeadImgUrl()}" style="width: 50px; display: block;">
-                <span class="weui-badge" style="position: absolute; top: -0.4em; right: -0.4em;">8</span>
             </div>
             <div class="weui-cell__bd">
                 <p style="font-size: 17px; color: #888;" th:text="${user.getNickName()}"></p>
@@ -44,6 +43,20 @@
                 <div class="weui-cell__hd"><label class="weui-label">您的手机号</label></div>
                 <div class="weui-cell__bd">
                     <input id="telephone" name="telephone" class="weui-input" placeholder="请输入您的手机号">
+                </div>
+            </div>
+
+            <div class="weui-cell weui-cell_active">
+                <div class="weui-cell__hd"><label class="weui-label">您需要的金额</label></div>
+                <div class="weui-cell__bd">
+                    <input id="targetFunds" name="targetFunds" class="weui-input" placeholder="请输入您需要筹集的资金额">
+                </div>
+            </div>
+
+            <div class="weui-cell weui-cell_active">
+                <div class="weui-cell__hd"><label class="weui-label">问题标题</label></div>
+                <div class="weui-cell__bd">
+                    <input id="telephone" name="telephone" class="weui-input" placeholder="请输入您问题的标题">
                 </div>
             </div>
 
@@ -64,7 +77,7 @@
         </div>
     </div>
 </div>
-<script  th:inline="javascript">
+<!--<script  th:inline="javascript">
     var appid = [[${APPID}]];
     var timestamp = [[${timestamp}]];
     var nonceStr = [[${nonceStr}]];
@@ -80,7 +93,7 @@
     });
 
 
-</script>
+</script>-->
 <script>
     function apply_submit(){
         var name = "#name";
