--- a/core/raise-funds-backend/src/main/resources/templates/apply.html
+++ b/core/raise-funds-backend/src/main/resources/templates/apply.html
@@ -55,7 +55,7 @@
             <div class="weui-cell weui-cell_active">
                 <div class="weui-cell__hd"><label class="weui-label">您的姓名</label></div>
                 <div class="weui-cell__bd">
-                    <input id="name" name="name" class="weui-input" placeholder="请输入您的性名">
+                    <input id="name" name="name" class="weui-input" placeholder="请输入您的姓名">
                 </div>
             </div>
             <div class="weui-cell weui-cell_active">
@@ -79,6 +79,15 @@
     </div>
     </form>
 </div>
+<div class="js_dialog" id="warnDialog" style="opacity: 1;">
+    <div class="weui-mask"></div>
+    <div class="weui-dialog">
+        <div class="weui-dialog__bd"></div>
+        <div class="weui-dialog__ft">
+            <a href="javascript:" class="weui-dialog__btn weui-dialog__btn_primary">知道了</a>
+        </div>
+    </div>
+</div>
 <!--<script  th:inline="javascript">
     var appid = [[${APPID}]];
     var timestamp = [[${timestamp}]];
@@ -98,6 +107,8 @@
 </script>-->
 <script>
     function apply_submit(){
+
+
 
         var json_data = $("#applyForm").serializeJSON();
         $.ajax({
