--- a/core/raise-funds-management/src/main/resources/templates/home.html
+++ b/core/raise-funds-management/src/main/resources/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>后台管理系统</title>
+    <title>筹款后台管理系统</title>
     <link rel="stylesheet" href="/layui/css/layui.css">
     <style>
         .layui-tab-title .layui-this{background-color:#009688;color:#eee;}.first-tab i.layui-tab-close{display:none !important;}.layui-layout-admin .layui-header{background-color:#1aa094 !important;}.layui-layout-admin .layui-logo{background-color:#0c0c0c !important;}.layuimini-color .color-title{padding:10px 0 10px 20px;border-bottom:1px solid #d9dada;margin-bottom:8px;}.layuimini-color .color-content{padding:0 5px 0 5px;}.layuimini-color .color-content ul{list-style:none;text-align:center;}.layuimini-color .color-content ul li{position:relative;display:inline-block;vertical-align:top;width:80px;height:50px;margin:0 15px 15px 0;padding:2px 2px 4px 2px;background-color:#f2f2f2;cursor:pointer;font-size:12px;color:#666;}.layuimini-color .color-content li.layui-this:after,.layuimini-color .color-content li:hover:after{width:100%;height:100%;padding:4px;top:-5px;left:-5px;border-color:#d8d8d8;opacity:1;}.layuimini-color .color-content li:after{content:'';position:absolute;z-index:20;top:50%;left:50%;width:1px;height:0;border:1px solid #f2f2f2;transition:all .3s;-webkit-transition:all .3s;opacity:0;}
@@ -21,7 +21,7 @@
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
-        <div class="layui-logo">Springboot-Manager</div>
+        <div class="layui-logo">筹款后台</div>
 
         <a>
             <div class="layuimini-tool-left"  onclick="iconHide()"><i class="icon-color layui-icon layui-icon-shrink-right" style="color:white" id="hide"></i></div>
@@ -37,7 +37,7 @@
             </li>
             <li class="layui-nav-item">
                 <a href="javascript:;">
-                    <div><span id="nickName">guest</span></div>
+                    <div><span id="nickName"></span></div>
                 </a>
                 <dl class="layui-nav-child">
                     <dd><a href="javascript:;" data-id="userProper" data-title="基本资料" data-url="/index/users/info"
@@ -117,7 +117,7 @@
             return ulHtml;
         };
         CoreUtil.sendGet("/sys/home/", null, function (res) {
-            $("#deptName").html("所属部门: " + res.data.userInfo.deptName);
+
             $("#nickName").html(res.data.userInfo.username);
             var data = res.data.menus;
             if (data != "" && data.length > 0) {
