--- a/core/raise-funds-management/src/main/resources/templates/login.html
+++ b/core/raise-funds-management/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>后台管理-登陆</title>
+    <title>筹款后台管理-登陆</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -21,18 +21,18 @@
     <div></div>
     <div class="admin-login-background">
         <div class="admin-header">
-            <span>后台管理系统</span>
+            <span>筹款后台管理系统</span>
         </div>
         <form class="layui-form" action="">
             <div>
                 <i class="layui-icon layui-icon-username admin-icon"></i>
                 <input type="text" name="username" placeholder="请输入用户名" autocomplete="off"
-                       class="layui-input admin-input admin-input-username" value="guest">
+                       class="layui-input admin-input admin-input-username" value="">
             </div>
             <div>
                 <i class="layui-icon layui-icon-password admin-icon"></i>
                 <input type="password" name="password" placeholder="请输入密码" autocomplete="off"
-                       class="layui-input admin-input" value="123456">
+                       class="layui-input admin-input" value="">
             </div>
             <div>
                 <input type="text" name="captcha" id="captcha" placeholder="请输入验证码" autocomplete="off"
